--- a/tmux.conf
+++ b/tmux.conf
@@ -6,8 +6,8 @@ bind-key a send-prefix
 set -g default-terminal "screen-256color"
 
 set-option -g status-position top
-set-option -g mouse-select-window on
-set-option -g mouse-select-pane on
+# set-option -g mouse-select-window on
+# set-option -g mouse-select-pane on
 
 # vim compatibility
 set -s escape-time 0
@@ -17,7 +17,7 @@ set -g set-remain-on-exit on
 unbind R
 bind R respawn-pane -k
 
-# vim bindings 
+# vim bindings
  setw -g mode-keys vi
 unbind h
 unbind j
@@ -28,9 +28,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 unbind Up
-unbind Down 
-unbind Left 
-unbind Right 
+unbind Down
+unbind Left
+unbind Right
 
 
 # powerline
